--- a/CoreBlogSite/Views/Blog/Index.cshtml
+++ b/CoreBlogSite/Views/Blog/Index.cshtml
@@ -15,14 +15,14 @@
                     @foreach (var item in Model)
                     {
                     <div class="col-lg-4 card">
-                        <a href="single.html">
+                        <a href="/Blog/BlogReadAll/@item.BlogID/">
                             <img src="@item.BlogImage" class="card-img-top img-fluid" alt="">
                         </a>
                         <div class="card-body">
                             <ul class="blog-icons my-4">
                                 <li>
                                     <a href="#">
-                                        <i class="far fa-calendar-alt"></i> @item.BlogCreateDate
+                                        <i class="far fa-calendar-alt"></i> @(((DateTime)item.BlogCreateDate).ToString("dd-MMM-yyyy"))
                                     </a>
                                 </li>
                                 <li class="mx-2">
@@ -32,23 +32,23 @@
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <i class="fas fa-eye"></i> @item.CategoryID
+                                        <i class="fas fa-eye"></i> @item.Category.CategoryName
                                     </a>
                                 </li>
 
                             </ul>
                             <h5 class="card-title">
-                                <a href="single.html">@item.BlogTitle</a>
+                                <a href="/Blog/BlogReadAll/@item.BlogID/">@item.BlogTitle</a>
                             </h5>
-                            <p class="card-text mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit sedc dnmo eiusmod tempor incididunt.. </p>
-                            <a href="single.html" class="btn btn-primary read-m">Read More</a>
+                            <p class="card-text mb-3">@item.BlogContent.Substring(0, item.BlogContent.Substring(0, 140).LastIndexOf(" ")).. </p>
+                            <a href="/Blog/BlogReadAll/@item.BlogID/" class="btn btn-primary read-m">Devamını Oku</a>
                         </div>
                     </div>
                     }
                     <nav aria-label="Page navigation example">
                         <ul class="pagination justify-content-left mt-4">
                             <li class="page-item disabled">
-                                <a class="page-link" href="#" tabindex="-1">Previous</a>
+                                <a class="page-link" href="#" tabindex="-1">Geri</a>
                             </li>
                             <li class="page-item">
                                 <a class="page-link" href="#">1</a>
@@ -60,7 +60,7 @@
                                 <a class="page-link" href="#">3</a>
                             </li>
                             <li class="page-item">
-                                <a class="page-link" href="#">Next</a>
+                                <a class="page-link" href="#">İleri</a>
                             </li>
                         </ul>
                     </nav>
