--- a/CoreBlogSite/Views/Default/Partial2.cshtml
+++ b/CoreBlogSite/Views/Default/Partial2.cshtml
@@ -2,12 +2,12 @@
 <div class="col-md-4 top-forms text-center mt-lg-3 mt-md-1 mt-0">
     <span>Hoşgeldin Elif Yener!</span>
     <span class="mx-lg-4 mx-md-2  mx-1">
-        <a href="login.html">
+        <a href="~/CoreBlogTema/login.html">
             <i class="fas fa-lock"></i> Giriş Yap
         </a>
     </span>
     <span>
-        <a href="register.html">
+        <a href="~/Register/Index">
             <i class="far fa-user"></i> Kayıt Ol
         </a>
     </span>
