--- a/CoreBlogSite/Views/Comment/PartialAddComment.cshtml
+++ b/CoreBlogSite/Views/Comment/PartialAddComment.cshtml
@@ -1,14 +1,17 @@
-﻿<div class="comment-top">
+﻿<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-ajax-unobtrusive/3.2.6/jquery.unobtrusive-ajax.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+<div class="comment-top">
     <h4>Yorum bırakın</h4>
     <div class="comment-bottom">
-        <form action="#" method="post">
-            <input class="form-control" type="text" name="Name" placeholder="Name" required="">
-            <input class="form-control" type="email" name="Email" placeholder="Email" required="">
+        <form asp-action="PartialAddComment" asp-controller="Comment" method="POST">
+            <input id="name" class="form-control" type="text" name="CommentUserName" placeholder="Adınız Soyadınız" required="">
+            <input id="subject" class="form-control" type="text" name="CommentTitle" placeholder="Konu" required="">
 
-            <input class="form-control" type="text" name="Subject" placeholder="Subject" required="">
-
-            <textarea class="form-control" name="Message" placeholder="Message..." required=""></textarea>
-            <button type="submit" class="btn btn-primary submit">Submit</button>
+            <textarea id="comment" class="form-control" name="CommentContent" placeholder="Yorumunuz..." required=""></textarea>
+            <button type="submit" class="btn btn-primary submit">Yorum Yap</button>
         </form>
     </div>
 </div>
