--- a/CoreBlogSite/Views/Default/Partial2.cshtml
+++ b/CoreBlogSite/Views/Default/Partial2.cshtml
@@ -2,7 +2,7 @@
 <div class="col-md-4 top-forms text-center mt-lg-3 mt-md-1 mt-0">
     <span>Hoşgeldin Elif Yener!</span>
     <span class="mx-lg-4 mx-md-2  mx-1">
-        <a href="~/CoreBlogTema/login.html">
+        <a href="~/Login/Index">
             <i class="fas fa-lock"></i> Giriş Yap
         </a>
     </span>
