--- a/CoreBlogSite/Views/Default/Partial3.cshtml
+++ b/CoreBlogSite/Views/Default/Partial3.cshtml
@@ -3,9 +3,9 @@
         <div class="row">
             <div class="col-lg-4 footer-grid-agileits-w3ls text-left">
                 <h3>Hakkımızda</h3>
-                <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. lacinia eget consectetur sed, convallis at tellus..</p>
+                <p>Bu site, 2021 yılında Elif Yener tarafından hayata geçirilmiş bir projedir. Dünya ve Türkiye gündeminde yer alan teknoloji ve oyun haberlerini, herkesin anlayacağı bir dil ile kullanıcılarına sunar. Teknolojik ürünler ve oyunlar hakkında samimi ve yalın bir sunum anlayışı ile video incelemeleri yapar, sadece gerekli bilgileri vererek ziyaretçilerini teknoloji dünyası hakkında bilinçlendirmeyi amaç edinir....</p>
                 <div class="read">
-                    <a href="single.html" class="btn btn-primary read-m">Devamını Oku</a>
+                    <a href="/About/Index/" class="btn btn-primary read-m">Devamını Oku</a>
                 </div>
             </div>
             <div class="col-lg-4 footer-grid-agileits-w3ls text-left">
@@ -73,17 +73,8 @@
             </div>
             <!-- subscribe -->
             <div class="col-lg-4 subscribe-main footer-grid-agileits-w3ls text-left">
-                <h2>Signup to our newsletter</h2>
-                <div class="subscribe-main text-left">
-                    <div class="subscribe-form">
-                        <form action="#" method="post" class="subscribe_form">
-                            <input class="form-control" type="email" placeholder="Enter your email..." required="">
-                            <button type="submit" class="btn btn-primary submit">Submit</button>
-                        </form>
-                        <div class="clearfix"> </div>
-                    </div>
-                    <p>We respect your privacy.No spam ever!</p>
-                </div>
+                <h2>Mail Bültenine Abone Olun</h2>
+                @await Html.PartialAsync("~/Views/NewsLetter/SubscribeMail.cshtml")
                 <!-- //subscribe -->
             </div>
         </div>
@@ -122,7 +113,7 @@
             </div>
             <div class="w3layouts-agile-copyrightbottom">
                 <p>
-                    © @DateTime.Now.Year Weblog. All Rights Reserved | Design by
+                    © @DateTime.Now.Year Asp.Net Core 5.0 Proje Kampı. Tüm Hakları Saklıdır | Design by
                     <a href="http://w3layouts.com/">W3layouts</a>
                 </p>
 
