--- a/CoreBlogSite/Views/Register/Index.cshtml
+++ b/CoreBlogSite/Views/Register/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model CityViewModel
+﻿@model EntityLayer.Concrete.Writer
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/UserLayout.cshtml";
@@ -12,61 +12,60 @@
         <h3 class="tittle">Yazar Kayıt Sayfası</h3>
         <div class="inner-sec">
             <div class="login p-5 bg-light mx-auto mw-100">
-                <form method="post">
+                @using (Html.BeginForm("Index", "Register", FormMethod.Post))
+                {
                     <div class="form-row">
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom01">Adınız Soyadınız</label>
-
-                            <input type="text" class="form-control" id="validationDefault01" placeholder="" name="WriterName" required="">
+                            @Html.TextBoxFor(x => x.WriterName, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x=>x.WriterName, "",new { @class = "text-danger" })
+                            @*<input type="text" class="form-control" id="validationDefault01" placeholder="" name="WriterName" required="">*@
                         </div>
                         <div class="col-md-6 mb-3">
                             <label for="validationCustom02">Mail Adresi</label>
-                            <input type="email" class="form-control" id="validationDefault02" placeholder="" name="WriterMail" required="">
+                            @Html.TextBoxFor(x => x.WriterMail, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.WriterMail, "", new { @class = "text-danger" })
+                            @*<input type="email" class="form-control" id="validationDefault02" placeholder="" name="WriterMail" required="">*@
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
                             <label for="exampleInputPassword1 mb-2">Şifre</label>
-                            <input type="password" class="form-control" id="password1" placeholder="" name="WriterPassword" required="" onkeyup='check();'>
+                            @Html.PasswordFor(x => x.WriterPassword, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.WriterPassword, "", new { @class = "text-danger" })
+                            @*<input type="password" class="form-control" id="password1" placeholder="" name="WriterPassword" required="" onkeyup='check();'>*@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="exampleInputPassword2 mb-2">Şifre (Tekrar)</label>
-                            <input type="password" class="form-control" id="password2" placeholder="" required="" onkeyup='check();'>
+                            @Html.PasswordFor(x => x.WriterConfirmPassword, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.WriterConfirmPassword, "", new { @class = "text-danger" })
                             <span id='message'></span>
                         </div>
                         <div class="form-group col-md-6">
                             <label for="filePath mb-2">Görsel Dosya Yolu</label>
-                            <input type="text" class="form-control" id="filePath" placeholder="" name="WriterImage" required="">
+                            @Html.TextBoxFor(x => x.WriterImage, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.WriterImage, "", new { @class = "text-danger" })
+                            @*<input type="text" class="form-control" id="filePath" placeholder="" name="WriterImage" required="">*@
                         </div>
                         <div class="form-group col-md-6">
                             <label for="selectCity mb-2">Şehir Seç</label>
-                            @Html.DropDownListFor(x => x.CityName, Model.Cities, new { @class = "form-control"})
+                            @*@Html.DropDownListFor(x => x.CityName, Model.Cities, new { @class = "form-control" })*@
+                            @await Component.InvokeAsync("CitiesList")
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary submit mb-4">Kayıt Ol</button>
                     <p>
                         <a href="#" id="btn1">Tüm şartları okudum, kabul ediyorum.</a>
                     </p>
-                </form>
+                }
 
             </div>
         </div>
     </div>
 </section>
-<script>
-    var check = function () {
-        if (document.getElementById('password1').value ==
-            document.getElementById('password2').value) {
-            document.getElementById('message').style.color = 'green';
-            document.getElementById('message').innerHTML = '';
-        } else {
-            document.getElementById('message').style.color = 'red';
-            document.getElementById('message').innerHTML = 'Şifreler Uyuşmuyor';
-        }
-    }
-</script>
+
 <script>
     $('#btn1').click(function () {
-        swal("Bu sitede yayınlanan tüm logolar, marka ve kurumsal amblemler 556 sayılı Markaların Korunması Hakkında Kanun Hükmünde Kararname hükümleri ile korunmaktadırlar. Logolar hiçbir şekilde kopyalanamaz ve kullanılamazlar. Kullanıcı/Kullanıcılar, logosunun veya web sitesine ait sayfaların bir başka web sitesinde herhangi bir şekilde yer almasından veya web sitesine üçüncü kişiler veya ziyaretçiler tarafından yapılabilecek herhangi bir içerik yüklemesinden dolayı elde edilecek bilgilerin kullanımından veya internetin genel uygulamalar çerçevesinde kullanımı dolayısıyla sorumluluk doğurmayan herhangi bir içerikten bağlı olduğu herhangi bir grup şirketinin veya çalışanlarının, yöneticilerinin, yetkilendirdikleri kişi veya kuruluşlarının, hukuki veya cezai hiçbir sorumluluğu olmadığını kabul ve beyan etmişlerdir.")
+        swal("Site Kullanım Koşulları", "Bu sitede yayınlanan tüm logolar, marka ve kurumsal amblemler 556 sayılı Markaların Korunması Hakkında Kanun Hükmünde Kararname hükümleri ile korunmaktadırlar. Logolar hiçbir şekilde kopyalanamaz ve kullanılamazlar. Kullanıcı/Kullanıcılar, logosunun veya web sitesine ait sayfaların bir başka web sitesinde herhangi bir şekilde yer almasından veya web sitesine üçüncü kişiler veya ziyaretçiler tarafından yapılabilecek herhangi bir içerik yüklemesinden dolayı elde edilecek bilgilerin kullanımından veya internetin genel uygulamalar çerçevesinde kullanımı dolayısıyla sorumluluk doğurmayan herhangi bir içerikten bağlı olduğu herhangi bir grup şirketinin veya çalışanlarının, yöneticilerinin, yetkilendirdikleri kişi veya kuruluşlarının, hukuki veya cezai hiçbir sorumluluğu olmadığını kabul ve beyan etmişlerdir.")
     });
 </script>
