Update writer information

--- a/CoreBlogSite/Views/Writer/WriterEditProfile.cshtml
+++ b/CoreBlogSite/Views/Writer/WriterEditProfile.cshtml
@@ -10,38 +10,46 @@
     <div class="card">
         <div class="card-body">
             <h4 class="card-title">Profil Bilgileri Düzenleme</h4>
-            <p class="card-description"> Basic form elements </p>
-            <form class="forms-sample">
-                <div class="form-group">
-                    <label for="exampleInputName1">Ad Soyad</label>
-                    @Html.TextBoxFor(x=>x.WriterName, new {@class = "form-control" })
+            @Html.HiddenFor(x => x.WriterID, new { @class = "form-control" })
+        <form class="forms-sample">
+            <div class="form-group">
+                <label for="exampleInputName1">Ad Soyad</label>
+                @Html.TextBoxFor(x => x.WriterName, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.WriterName, "", new { @class = "text-danger" })
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail3">E-Posta</label>
+                @Html.TextBoxFor(x => x.WriterMail, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.WriterMail, "", new { @class = "text-danger" })
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword4">Şifre</label>
+                @Html.PasswordFor(x => x.WriterPassword, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.WriterPassword, "", new { @class = "text-danger" })
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword4">Şifre (Tekrar)</label>
+                @Html.PasswordFor(x => x.WriterConfirmPassword, new { @class = "form-control" })
+                @Html.ValidationMessageFor(x => x.WriterConfirmPassword, "", new { @class = "text-danger" })
+            </div>
+            <div class="form-group">
+                <label>Profil Fotoğrafı</label>
+                <input type="file" name="img[]" class="file-upload-default">
+                <div class="input-group col-xs-12">
+                    <input type="text" class="form-control file-upload-info" disabled placeholder="Resim Seç">
+                    <span class="input-group-append">
+                        <button class="file-upload-browse btn btn-gradient-primary" type="button">Resim Seç</button>
+                    </span>
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputEmail3">E-Posta</label>
-                    @Html.TextBoxFor(x => x.WriterMail, new { @class = "form-control" })
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword4">Şifre</label>
-                    @Html.PasswordFor(x => x.WriterPassword, new { @class = "form-control" })
-                </div>
-                <div class="form-group">
-                    <label>Profil Fotoğrafı</label>
-                    <input type="file" name="img[]" class="file-upload-default">
-                    <div class="input-group col-xs-12">
-                        <input type="text" class="form-control file-upload-info" disabled placeholder="Resim Seç">
-                        <span class="input-group-append">
-                            <button class="file-upload-browse btn btn-gradient-primary" type="button">Resim Seç</button>
-                        </span>
-                    </div>
-                </div>
-                
-                <div class="form-group">
-                    <label for="exampleTextarea1">Hakkında</label>
-                    @Html.TextAreaFor(x => x.WriterAbout, 10, 3, new { @class = "form-control" })
-                </div>
-                <button type="submit" class="btn btn-gradient-primary mr-2">Güncelle</button>
-                <button class="btn btn-light">İptal</button>
-            </form>
+            </div>
+
+            <div class="form-group">
+                <label for="exampleTextarea1">Hakkında</label>
+                @Html.TextAreaFor(x => x.WriterAbout, 10, 3, new { @class = "form-control" })
+            </div>
+            <button type="submit" class="btn btn-gradient-primary mr-2">Güncelle</button>
+            <button class="btn btn-light">İptal</button>
+        </form>
         </div>
     </div>
 </div>
