Add message notification

--- a/CoreBlogSite/Views/Shared/WriterLayout.cshtml
+++ b/CoreBlogSite/Views/Shared/WriterLayout.cshtml
@@ -74,7 +74,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link count-indicator dropdown-toggle" id="messageDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
                             <i class="mdi mdi-email-outline"></i>
-                            <span class="count-symbol bg-warning"></span>
+                            <span class="count-symbol bg-success"></span>
                         </a>
                         @await Component.InvokeAsync("WriterMessageNotification")
                     </li>
