--- a/CoreBlogSite/Views/Shared/Components/WriterNotification/Default.cshtml
+++ b/CoreBlogSite/Views/Shared/Components/WriterNotification/Default.cshtml
@@ -9,7 +9,7 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item preview-item">
                 <div class="preview-thumbnail">
-                    <div class="@item.NotificationColor">
+                    <div class="preview-icon bg-@item.NotificationColor">
                         <i class="@item.NotificationTypeSymbol"></i>
                     </div>
                 </div>
@@ -20,5 +20,5 @@
             </a>
         }
     }
-    <h6 class="p-3 mb-0 text-center">Tüm bildirimleri gör</h6>
+    <a href="/Notification/AllNotification/" class="p-3 mb-0 text-center btn">Tüm bildirimleri gör</a>
 </div>
