--- a/CoreBlogSite/Views/Shared/Components/WriterMessageNotification/Default.cshtml
+++ b/CoreBlogSite/Views/Shared/Components/WriterMessageNotification/Default.cshtml
@@ -10,7 +10,7 @@
                 <img src="~/writer/assets/images/faces/face4.jpg" alt="image" class="profile-pic">
             </div>
             <div class="preview-item-content d-flex align-items-start flex-column justify-content-center">
-                <h6 class="preview-subject ellipsis mb-1 font-weight-normal">@item.SenderID sana mesaj gönderdi.</h6>
+                <h6 class="preview-subject ellipsis mb-1 font-weight-normal">@item.SenderUser.WriterName sana mesaj gönderdi.</h6>
                 <p class="text-gray mb-0"> @item.MessageDate.ToShortDateString() </p>
             </div>
         </a>
