--- a/CoreBlogSite/Views/Writer/Index.cshtml
+++ b/CoreBlogSite/Views/Writer/Index.cshtml
@@ -5,12 +5,7 @@
 
 <!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-
-</body>
-</html>
+<h1>Giriş Yaptınız</h1>
+<br />
+@ViewBag.name
+@ViewBag.mail
