--- a/CoreBlogSite/Areas/Admin/Views/Category/Index.cshtml
+++ b/CoreBlogSite/Areas/Admin/Views/Category/Index.cshtml
@@ -1,8 +1,32 @@
-﻿
+﻿@using X.PagedList
+@using X.PagedList.Mvc.Core
+@model IPagedList<EntityLayer.Concrete.Category>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/AdminLayout.cshtml";
 }
+<table class="table table-bordered">
+    <tr>
+        <th>#</th>
+        <th>Kategori Adı</th>
+        <th>Pasif Yap</th>
+        <th>Aktif Yap</th>
+        <th>Düzenle</th>
+    </tr>
+    @foreach (var item in Model)
+    {
 
-<h1>Category</h1>
+        <tr>
 
+            <td>@item.CategoryID</td>
+            <td>@item.CategoryName</td>
+            <td> <a href="#" class="btn btn-info">Pasif Yap</a></td>
+            <td> <a href="#" class="btn btn-info">Aktif Yap</a></td>
+            <td> <a href="#" class="btn btn-success">Düzenle Yap</a></td>
+
+        </tr>
+    }
+
+</table>
+<br />
+@Html.PagedListPager((IPagedList)Model, page => Url.Action("Index", new { page }))
